# thundersorter

./: .env.example  .gitignore  CHANGELOG.md  README.md  build.sh  issues.md  pyproject.toml  release.sh  thundersorter.service  updates.json
.claude/learnings/: github-cli.json  mozilla-addon-policy.json  thunderbird-extension.json
.github/workflows/: ci.yml
docs/: auth-callback.html
extension/: analyzer.js  background.js  common.js  diagnostics.js  folder-router.js  manifest.json  oauth.js
extension/consent/: consent.html  consent.js
extension/diagnostics/: diagnostics.html  diagnostics.js
extension/options/: options.html  options.js
extension/progress/: progress.html  progress.js
extension/providers/: anthropic.js  gemini.js  openai.js
service/: classifier.py  config.py  main.py  models.py
tests/: analyzer.test.js  common.test.js  diagnostics.test.js  folder-router.test.js  oauth.test.js  providers.test.js  test_api.py  test_classifier.py
